# UniVoice-AI-Translator

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  Dockerfile.base  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/specs/univoice/: tasks.md
scripts/: setup.ps1  setup.sh
services/audio_ingress/: Dockerfile
services/speech_to_text/: Dockerfile
src/: __init__.py
src/services/: __init__.py
src/services/audio_egress/: __init__.py
src/services/audio_ingress/: __init__.py
src/services/authentication/: __init__.py
src/services/session_manager/: __init__.py
src/services/speech_to_text/: __init__.py
src/services/translation/: __init__.py
src/services/voice_cloning/: __init__.py
src/services/voice_profile/: __init__.py
src/shared/: __init__.py  aws_clients.py  config.py  errors.py  logging.py  tracing.py
tests/: __init__.py  conftest.py
tests/shared/: test_config.py  test_errors.py
